Add footer, impressum, and contact views with responsive design and form handling
- Implemented FooterView.vue with branding, social media links, and legal links.
- Created ImpressumView.vue with legal information and a back to home link.
- Developed KontaktView.vue with a contact form, including validation and submission handling.
- Enhanced styling for better user experience and responsiveness across devices.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="">
+<!doctype html>
+<html lang="de" class="dark bg-slate-950">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>Dominik Kasten | Portfolio</title>
   </head>
-  <body>
+  <body class="min-h-screen bg-gradient-to-b from-[#1a1c26] to-[#13141f]">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
