Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -6,7 +6,52 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>Dominik Kasten | Portfolio</title>
+    <title>Dominik Kasten – Full-Stack Webentwickler aus Goslar | IT-Dienstleistungen</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="canonical" href="https://dominik-kasten.de/" />
+
+    <meta property="og:title" content="Dominik Kasten – Full-Stack Webentwickler aus Goslar" />
+    <meta
+      property="og:description"
+      content="Moderne Webentwicklung und IT-Dienstleistungen für Unternehmen aus Niedersachsen."
+    />
+    <meta property="og:image" content="https://dominik-kasten.de/social-preview.jpg" />
+    <meta property="og:url" content="https://dominik-kasten.de" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="de_DE" />
+    <meta property="og:site_name" content="Dominik Kasten" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="description"
+      content="Ich bin Dominik Kasten, Full-Stack Entwickler aus Goslar. Ich entwickle moderne Weblösungen für Unternehmen in Niedersachsen und darüber hinaus."
+    />
+
+    <meta name="theme-color" content="#13141f" />
+
+    <meta name="apple-mobile-web-app-title" content="Dominik Kasten" />
+    <meta name="application-name" content="Dominik Kasten" />
+    <meta name="msapplication-TileColor" content="#1a1c26" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Dominik Kasten",
+        "url": "https://dominik-kasten.de",
+        "image": "https://dominik-kasten.de/dein-profilbild.jpg",
+        "description": "Full-Stack Webentwickler aus Goslar. Ich helfe Unternehmen in Niedersachsen mit maßgeschneiderter Webentwicklung und IT-Lösungen.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Grauhöfer Str. 9",
+          "addressLocality": "Goslar",
+          "postalCode": "38640",
+          "addressCountry": "DE"
+        },
+        "telephone": "+49-176-56723879"
+      }
+    </script>
   </head>
   <body class="min-h-screen bg-gradient-to-b from-[#1a1c26] to-[#13141f]">
     <div id="app"></div>
