Update Open Graph image and add Google Analytics tracking; fix image path in AboutMe component

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       property="og:description"
       content="Moderne Webentwicklung und IT-Dienstleistungen für Unternehmen aus Niedersachsen."
     />
-    <meta property="og:image" content="https://dominik-kasten.de/social-preview.jpg" />
+    <meta property="og:image" content="https://dominik-kasten.de/social-preview.png" />
     <meta property="og:url" content="https://dominik-kasten.de" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="de_DE" />
@@ -40,7 +40,7 @@
         "@type": "LocalBusiness",
         "name": "Dominik Kasten",
         "url": "https://dominik-kasten.de",
-        "image": "https://dominik-kasten.de/dein-profilbild.jpg",
+        "image": "https://dominik-kasten.de/me.png",
         "description": "Full-Stack Webentwickler aus Goslar. Ich helfe Unternehmen in Niedersachsen mit maßgeschneiderter Webentwicklung und IT-Lösungen.",
         "address": {
           "@type": "PostalAddress",
@@ -51,6 +51,17 @@
         },
         "telephone": "+49-176-56723879"
       }
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y2MBSY2W6B"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-Y2MBSY2W6B')
     </script>
   </head>
   <body class="min-h-screen bg-gradient-to-b from-[#1a1c26] to-[#13141f]">
