--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="canonical" href="https://dominik-kasten.de/" />
+    <link rel="canonical" href="https://www.dominik-kasten.de/" />
 
     <meta property="og:title" content="Dominik Kasten – Full-Stack Webentwickler aus Goslar" />
     <meta
